--- a/styles/style.css
+++ b/styles/style.css
@@ -22,8 +22,9 @@ body{
 }
 
 main{
+    padding-top: 1px;
     display: flex;
-    min-height: 80vh;
+    min-height: 85vh;
     
 }
 
@@ -40,9 +41,9 @@ footer{
 }
 
 
-.carousel-inner{
+.carousel-inner img{
     width: 100%;
-    height: 450px;
+    height: 480px;
     object-fit: cover;
 }
 
@@ -91,6 +92,21 @@ footer{
 }
 
 .nav-link{
-    font-size: 20px;
+    font-size: 24px;
     color: #fff;
+    gap:1rem;
+}
+
+
+
+
+
+@media only screen and (min-width:576px){
+    #navbarSupportedContent{
+        padding-left: 200px;
+        
+        
+        
+}
+
 }
